tests/snapshots/e2e__basic__OutParameter.snap
---
source: tests/e2e.rs
expression: output.generated_code
---
// Decompiled Udon Program
// This is pseudo-code and may not compile directly

public class OutParameter : UdonSharpBehaviour
{
    System.Object[] __gintnl_SystemObjectArray_0 =
        new System.Object[] { null /* unserializable */ };

    public void _start()
    {
        VRC.SDK3.Data.DataDictionary __lcl_myDict_VRCSDK3DataDataDictionary_0 = null;
        VRC.SDK3.Data.DataToken __lcl_outResult_VRCSDK3DataDataToken_0 =
            null /* unserializable */;
        System.Boolean __lcl_success_SystemBoolean_0 = false;

        __lcl_myDict_VRCSDK3DataDataDictionary_0 = new VRC.SDK3.Data.DataDictionary();
        __lcl_myDict_VRCSDK3DataDataDictionary_0.Add("TargetKey", 42);
        __lcl_success_SystemBoolean_0 = __lcl_myDict_VRCSDK3DataDataDictionary_0.TryGetValue(
            "TargetKey", ref __lcl_outResult_VRCSDK3DataDataToken_0);
        if (__lcl_success_SystemBoolean_0)
        {
            __gintnl_SystemObjectArray_0.Set(0, __lcl_outResult_VRCSDK3DataDataToken_0.Int);
            UnityEngine.Debug.LogFormat("Success! Value is: {0}", __gintnl_SystemObjectArray_0);
        }
        else
        {
            UnityEngine.Debug.Log("Key not found.");
        }
        return;
    }
}
